--- a/html/landingIndex.html
+++ b/html/landingIndex.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/reset.css" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/reset.css" />
+  <link rel="stylesheet" href="../assets/css/basicStyle.css" />
+  <link rel="stylesheet" href="../assets/css/landingStyle.css" />
   <title>Meathead: Be strong!</title>
 </head>
 <body>
@@ -12,11 +13,11 @@
     <h1>Meathead</h1>
     <nav>
       <ul>  
-        <li><p>Home</p></li>
-        <li><a href="">First Week</a></li>
-        <li><a href="">Second Week</a></li>
-        <li><a href="">Third Week</a></li>
-        <li><a href="">Fourth Week</a></li>
+        <li>Home</a></li>
+        <li><a href="./weekOneIndex.html"></a><p>First Week</p></li>
+        <li><a href="./weekTwoIndex.html">Second Week</a></li>
+        <li><a href="./weekThreeIndex.html">Third Week</a></li>
+        <li><a href="./weekFourIndex.html">Fourth Week</a></li>
       </ul>
     </nav>
   </header>
@@ -35,28 +36,31 @@
       <section class="flex-container">
         <form class="card" class ="flex-item" id="personal-info">
           <h2>Who are you?</h2>
-          <ul>
-            <li>
-              <label for="username">Username</label>
-              <input type="text" id="username" name="username" />
-            </li>
-            <li>
-              <label for="date">Date</label>
-              <input type="date" id="date" name="date" />
-            </li>
-            <li>
-              <label for="weight">Weight</label>
-              <input type="text" id="weight" name="weight" />
-            </li>
-          </ul>
+          <div>
+            <ul>
+              <li>
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" />
+              </li>
+              <li>
+                <label for="date">Date</label>
+                <input type="date" id="date" name="date" />
+              </li>
+              <li>
+                <label for="weight">Weight</label>
+                <input type="text" id="weight" name="weight" />
+              </li>
+            </ul>
+          </div>
         </form>
         <form class="card"  class="flex-item" id="personal-goals">
           <h2>What are your goals?</h2>
+          <div>
           <ul>
-            <li>
+              <li>
               <label for="muscle-group">Muscle Group</label>
               <input type="checkbox" id="muscle-group" name="muscle-group" />
-            </li>
+            <li>
             <li>
               <label for="split">Number of Days You Can go to the Gym in a Week</label>
               <input type="checkbox" id="split" name="split" />
@@ -66,6 +70,7 @@
               <input type="checkbox" id="accessory-exercises" name="accessory-exercises" />
             </li>
           </ul>
+        </div>
         </form>
       </section>
     </div>
