--- a/html/landingIndex.html
+++ b/html/landingIndex.html
@@ -14,10 +14,10 @@
     <nav>
       <ul>  
         <li>Home</a></li>
-        <li><a href="./weekOneIndex.html"></a><p>First Week</p></li>
-        <li><a href="./weekTwoIndex.html">Second Week</a></li>
-        <li><a href="./weekThreeIndex.html">Third Week</a></li>
-        <li><a href="./weekFourIndex.html">Fourth Week</a></li>
+        <li><a class="navLink" href="./weekOneIndex.html">First Week</a></li>
+        <li><a class="navLink" href="./weekTwoIndex.html">Second Week</a></li>
+        <li><a class="navLink" href="./weekThreeIndex.html">Third Week</a></li>
+        <li><a class="navLink" href="./weekFourIndex.html">Fourth Week</a></li>
       </ul>
     </nav>
   </header>
@@ -78,7 +78,8 @@
   <footer>
     <p>Made with Love by "We Deserve An A" 2024</p>
 </body>
-<script src="assets/js/landingScript.js"></script>
+<script src="../assets/js/basicScript.js"></script>
+<script src="../assets/js/landingScript.js"></script>
 </html>
 
 <!-- Landing page
