--- a/html/weekOneIndex.html
+++ b/html/weekOneIndex.html
@@ -13,11 +13,11 @@
     <h1>Meathead</h1>
     <nav>
       <ul>  
-        <li><a href="./landingIndex.html">Home</a></li>
+        <li><a class="navLink" href="./landingIndex.html">Home</a></li>
         <li><p>First Week</p></li>
-        <li><a href="./weekTwoIndex.html">Second Week</a></li>
-        <li><a href="./weekThreeIndex.html">Third Week</a></li>
-        <li><a href="./weekFourIndex.html">Fourth Week</a></li>
+        <li><a class="navLink" href="./weekTwoIndex.html">Second Week</a></li>
+        <li><a class="navLink" href="./weekThreeIndex.html">Third Week</a></li>
+        <li><a class="navLink" href="./weekFourIndex.html">Fourth Week</a></li>
       </ul>
     </nav>
   </header>
@@ -28,4 +28,6 @@
 
   </footer>
 </body>
+<script src="../assets/js/basicScript.js"></script>
+<script src="../assets/js/weekScript.js"></script>
 </html>
