change on link html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/css/reset.css" />
-  <link rel="stylesheet" href="../assets/css/basicStyle.css" />
-  <link rel="stylesheet" href="../assets/css/landingStyle.css" />
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/basicStyle.css" />
+  <link rel="stylesheet" href="assets/css/landingStyle.css" />
   <title>Meathead: Be strong!</title>
 </head>
 <body>
@@ -78,8 +78,8 @@
   <footer>
     <p>Made with Love by "We Deserve An A" 2024</p>
   </footer>
-    <script src="../assets/js/basicScript.js"></script>
-    <script src="../assets/js/landingScript.js"></script>
+    <script src="assets/js/basicScript.js"></script>
+    <script src="assets/js/landingScript.js"></script>
 </body>
 </html>
 
