--- a/weekOneIndex.html
+++ b/weekOneIndex.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/css/reset.css" />
-  <link rel="stylesheet" href="../assets/css/basicStyle.css" />
-  <link rel="stylesheet" href="../assets/css/weekStyle.css" />
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/basicStyle.css" />
+  <link rel="stylesheet" href="assets/css/weekStyle.css" />
   <title>Week One</title>
 </head>
 <body>
@@ -28,6 +28,6 @@
 
   </footer>
 </body>
-<script src="../assets/js/basicScript.js"></script>
-<script src="../assets/js/weekScript.js"></script>
+<script src="assets/js/basicScript.js"></script>
+<script src="assets/js/weekScript.js"></script>
 </html>
