--- a/weekOneIndex.html
+++ b/weekOneIndex.html
@@ -38,81 +38,95 @@
     <div class="container-fluid" style="padding: 20px 9px 30px; margin: 0px 0px 0px; border: 0px;">
       <p style="font-size: 35px;">Welcome User name!</p>
       <p style="font-size: 35px;">This is your #MuscleGroup# Page! For Week #NumberWeek#!</p>
-      <div style="float:right;">
-        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#weightcalculator" aria-controls="weightcalculator">Weight Calculator</button>
-      </div>
     </div>
     
 
     <div class="container text-left"  style="padding: 20px 9px 30px; align-items: center;">
-      <div class="row">
-        <div class="col order-7">
-          <div class="card">
-            <div class="card-body">
-              <h1 style="padding: 0px 9px 20px;">Day 1</h1>
-              <div class="container text-left">           
-                <div class="row">
-                  <div class="col order-0">
-                    <p class="card-text">Excerise Description: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, mollitia a. Explicabo nobis totam, adipisci nostrum reiciendis libero iste ipsam, eius ipsa esse vel impedit. Saepe, culpa. Numquam, delectus qui.</p>
-                  </div>
-                  <div class="col order-6">
-                    <!-- I could not get the button to center -->
-                    <div class="align-self-stretch">
-                      <input type="checkbox" class="btn-check" id="completeButton" autocomplete="off">
-                      <label class="btn btn-outline-primary" for="completeButton">Completed!</label><br>   
-                    </div>
-                    <div class="dropdown">
-                      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Sub Tasks
-                      </button>
-                      <ul class="dropdown-menu dropdown-toggle">
-                        <li>
-                          <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                            <label class="form-check-label" for="inlineCheckbox1">
-                              <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#subtask1" aria-controls="subtask1">Subtask 1</button>
-                            </label>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                            <label class="form-check-label" for="inlineCheckbox1">Suboption</label>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                            <label class="form-check-label" for="inlineCheckbox1">Suboption</label>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                  </div> 
-                </div>           
-              </div>
-          </div>
-        </div>
-      </div>
-        <div class="col order-5">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <div class="card">
+        <div class="card-body">              
+          <div class="container text-left" id="border">           
+            <!-- Top row Day and Timer-->
+            <div class="row">
+              <div class="col" id="vertRightBorder">
+                <h1 style="padding-top: 5px;">Day 1</h1>
+              </div>     
+              <div class="col-10" id="vertLeftBorder">
+                <h1 style="display: inline-block; height: 60px; padding-top: 5px;">Timer:</h1>
+                <p id = "timer">1:00</p>
+              </div>       
             </div>
-          </div>
-        </div>
-        <div class="col order-1">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <!--^^ Top row Day and Timer ^^-->
+            <!-- Buttons Grid -->
+            <div class="container text-center" id="cardContent">
+              <div class="row gx-5" id="buttonGridTop">
+                <div class="col">
+                  <button type="button" class="btn btn-primary btn-lg">Example</button>
+                </div>
+                <div class="col">Column</div>
+                <div class="col">Column</div>
+                <div class="col">Column</div>
+              </div>
+
+              <div class="row gx-5" id="buttonGridBottom">
+                <div class="col">Column</div>
+                <div class="col">Column</div>
+                <div class="col">Column</div>
+                <div class="col">Column</div>
+              </div>
+              <!--^^ Buttons Grid ^^-->
+              <!-- Notes -->
+              <form class="row gx-2 align-items-center" id="notesForm">
+                <div class="col align-items-center">
+                  <div class="row gx-2 align-items-center">
+                    <label for="notes" class="col-sm-2 col-form-label col-form-label-sm" style="font-size: 35px;">Notes</label>
+                    <div class="col-sm-10">
+                    <textarea class="form-control" id="notes"></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <button type="button" class="btn btn-primary btn-lg">Done</button>
+                </div>
+              </form>
+              <!--^^ Notes ^^-->  
+              <!-- Accessory -->  
+              <div class="row justify-content-md-center" id="accessoryGridTop" style="font-size: 25px;">
+                Accessory Exercises
+              </div>
+
+              <div class="row gx-5" id="accessoryGridBottom">
+                <div class="col">
+                  <button type="button" class="btn btn-primary btn-lg">Example</button>
+                </div>
+                <div class="col">Column</div>
+                <div class="col">Column</div>
+                <div class="col">Column</div>
+              </div>  
+              <!--^^ Accessory ^^-->
+              <!-- Cardio -->
+              <form class="row justify-content-md-center" id="cardioForm">
+                <div class="col-6">
+                  <div class="row g-0 justify-content-md-center">
+                    <label for="cardio" class="col" style="font-size: 35px;">Cardio</label>
+                    <div class="col-6">
+                      <button type="button" class="btn btn-outline-primary" id="cardio">Something</button>
+                    </div>
+                  </div>
+                </div>
+              </form> 
+              <!--^^ Cardio ^^--> 
+              <!-- Complete Button --> 
+              <div class="row justify-content-md-center" id="complete1">
+                <div class="col-70">
+                  <button type="button" class="btn btn-primary btn-lg">Complete</button>
+                </div>                
+              </div> 
+              <!--^^ Complete Button ^^-->                 
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </main>
   <footer>
 
@@ -120,29 +134,7 @@
 </body>
 
 <!-- Off canvas -->
-<div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="weightcalculator" aria-labelledby="weightcalculatorlabel">
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="weightcalculatorlabel">Quick Weight Calculator</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Enter a Weight">
-    </div>
-    <button type="button" class="btn btn-primary btn-lg">Calculate!</button>
-    <input class="form-control" type="text" value="The weights for each side output" aria-label="weightoutput" disabled readonly>
-  </div>
-</div>
 
-<div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="subtask1" aria-labelledby="subtask1label">
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="subtask1label">Subtask</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <p>Subtask Description</p>
-  </div>
-</div>
 <!-- ^^ Off canvas ^^ -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="assets/js/basicScript.js"></script>
