--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
   <title>Meathead: Be strong!</title>
 </head>
 <body>
-  <header>
+  <div class="hero-image">
+    <div class="hero-text">
+      <header>
     <h1>Meathead</h1>
     <nav>
       <ul>  
-        <li>Home</a></li>
-        <li><a class="navLink" href="./weekOneIndex.html">First Week</a></li>
-        <li><a class="navLink" href="./weekTwoIndex.html">Second Week</a></li>
-        <li><a class="navLink" href="./weekThreeIndex.html">Third Week</a></li>
-        <li><a class="navLink" href="./weekFourIndex.html">Fourth Week</a></li>
+           <li>Home</a></li>
+         <a class="navLink" href="./weekOneIndex.html">First Week</a></li>
+        <a class="navLink" href="./weekTwoIndex.html">Second Week</a></li>
+        <a class="navLink" href="./weekThreeIndex.html">Third Week</a></li>
+        <a class="navLink" href="./weekFourIndex.html">Fourth Week</a></li>
       </ul>
     </nav>
+  </div>
   </header>
   <div class="hero-banner">
     <div>
