fixed local storage and variables

--- a/weekOneIndex.html
+++ b/weekOneIndex.html
@@ -60,7 +60,7 @@
             <div class="container text-center" id="cardContent">
               <div class="row gx-5" id="buttonGridTop">
                 <div class="col">
-                  <button type="button" class="btn btn-primary btn-lg">Example</button>
+                  <button id = "focusExerciseSetAdvice" class = "setAdvice" type="button" class="btn btn-primary btn-lg">Example</button>
                 </div>
                 <div class="col">Column</div>
                 <div class="col">Column</div>
