--- a/weekOneIndex.html
+++ b/weekOneIndex.html
@@ -92,7 +92,7 @@
                   </form>
                   <!--^^ Notes ^^-->  
                   <!-- Accessory -->  
-                  <div class="row justify-content-md-center" id="accessoryGridTop" style="font-size: 25px;">
+                  <div class="row justify-content-md-center" id="accessoryGridTop">
                     Accessory Exercises
                   </div>
 
@@ -116,7 +116,7 @@
                   </form> 
                   <!--^^ Cardio ^^--> 
                   <!-- Complete Button --> 
-                  <div class="row justify-content-md-center" id="complete1">
+                  <div class="row justify-content-md-center" id="complete">
                     <div class="col-70">
                       <button type="button" class="btn btn-primary btn-lg">Complete</button>
                     </div>                
