change on background

--- a/weekOneIndex.html
+++ b/weekOneIndex.html
@@ -36,8 +36,7 @@
   </header>
   <main>
     <div class="container-fluid" style="padding: 20px 9px 30px; margin: 0px 0px 0px; border: 0px;">
-      <p style="font-size: 35px;">Welcome User name!</p>
-      <p style="font-size: 35px;">This is your #MuscleGroup# Page! For Week #NumberWeek#!</p>
+      <p style="font-size: 35px;"> User ID:</p>
     </div>
     
 
