--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   </div>
   <main class="page-wrapper">
     <div class="page-section">
-      <aside class="intro">
+      <section class="intro lg-6">
         <h2>Welcome to Meathead</h2>
         <p>It takes heavy lifting, but your goals are within your capabilities!</p>
         <p>Let's talk about who you are and what you home to accomplish so we can start planning for the next month of work at the gym</p>
-      </aside>
+      </section>
       <section class="flex-container">
         <form class="card" class ="flex-item" id="personalInfoForm">
           <h2>Who are you?</h2>
